--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -4,10 +4,10 @@ repository:
   # See https://docs.github.com/en/rest/reference/repos#update-a-repository for all available settings.
 
   # The name of the repository. Changing this will rename the repository
-  name: repo-name
+  name: repo-test-1
 
   # A short description of the repository that will show up on GitHub
-  description: description of repo
+  description: Repo to Test something
 
   # A URL with more information about the repository
   homepage: https://example.github.io/
