--- a/package.json
+++ b/package.json
@@ -56,21 +56,7 @@
     "glob": "^8.1.0",
     "global-agent": "^3.0.0",
     "got": "^11.8.5",
-    "js-yaml": "^4.1.0",
-    "jws": "^4.0.0",
-    "node-stream-zip": "^1.15.0",
-    "packageurl-js": "^1.0.0",
-    "parse-packagejson-name": "^1.0.1",
-    "prettify-xml": "^1.2.0",
-    "properties-reader": "^2.2.0",
-    "semver": "^7.3.8",
-    "ssri": "^8.0.1",
-    "table": "^6.8.1",
-    "tar": "^6.1.13",
-    "uuid": "^9.0.0",
-    "xml-js": "^1.6.11",
-    "xmlbuilder": "^15.1.1",
-    "yargs": "^17.6.2"
+    "js-yaml": "^4.1.0"
   },
   "optionalDependencies": {
     "@cyclonedx/cdxgen-plugins-bin": "^1.0.5",
